# tntconcept-binnacle/src/main/kotlin/com/autentia/tnt/binnacle/entities/dto/AbsenceDTO.kt
@@ -1,0 +1,15 @@
+package com.autentia.tnt.binnacle.entities.dto
+
+import java.time.LocalDate
+
+enum class AbsenceType {
+    VACATION, PAID_LEAVE
+}
+
+data class AbsenceDTO(
+    val userId: Long,
+    val userName: String,
+    val type: AbsenceType,
+    val startDate: LocalDate,
+    val endDate: LocalDate,
+)
